<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/ActionBarVariantStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laundry_App"

            android:textSize="30sp"
            android:textColor="@android:color/white"
            app:layout_collapseMode="pin" />
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        android:theme="@style/MyLabelStyle"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/login_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:minWidth="300dp"
        >

        <include
            layout="@layout/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="203dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:theme="@style/MyLabelStyle"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/watchman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/im_watchman"
            android:theme="@style/MyLabelStyle"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:theme="@style/MyLabelStyle"
            android:layout_margin="5dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>