<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@id/end"
                android:textSize="40sp"
                android:layout_margin="7dp"
                tools:text="3" />

            <TextView
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/time_layout"
                app:layout_constraintTop_toBottomOf="@id/end"
                tools:text="этаж"
                android:layout_marginStart="2dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/separator" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow>
                <Button
                    android:id="@+id/time_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time1"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:id="@+id/time_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time2"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/time_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time3"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/time_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time4"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:id="@+id/time_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time5"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/time_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time6"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>