<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<include layout="@layout/toolbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_label"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:theme="@style/MyLabelStyle"
        android:layout_margin="5dp"
        />


    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nots"
        android:theme="@style/MyTextStyle"
        app:layout_constraintTop_toBottomOf="@id/settings_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/notification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_time_label"
        android:theme="@style/MyTextStyle"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/notification_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Spinner
        android:id="@+id/groupList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_margin="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_label"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/groupList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>