<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

   <include layout="@layout/toolbar_layout"
       app:layout_constraintTop_toTopOf="parent"
       android:id="@+id/toolbar"/>
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_label"
        android:textSize="25sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:theme="@style/MyLabelStyle"
        android:layout_margin="5dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fio"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="70"
            >
            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_last_name_label"
                android:theme="@style/MyTextStyle"
                android:layout_margin="5dp"
                />
            <EditText
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:id="@+id/last_name"
                tools:text="Голованова"
                android:layout_width="match_parent"
                android:inputType="text"/>
            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_first_name_label"
                android:theme="@style/MyTextStyle"
                android:layout_margin="5dp"
                />
            <EditText
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:id="@+id/first_name"
                tools:text="Мария"
                android:layout_width="match_parent"

                android:inputType="text"/>
            <TextView
                android:id="@+id/pat_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_pat_name_label"
                android:theme="@style/MyTextStyle"
                android:layout_margin="5dp"
                />
            <EditText
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:id="@+id/pat_name"
                android:layout_width="match_parent"
                android:inputType="text"
                tools:text="Михайловна"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/image"
            android:layout_weight="50"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxWidth="50dp"
            android:maxHeight="150dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/avatar_base"
            android:layout_marginTop="45dp"

            android:layout_marginBottom="45dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/fio"
        android:orientation="vertical"
        android:id="@+id/mail_check"
        >
        <TextView
            android:id="@+id/mail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_mail_label"
            android:theme="@style/MyTextStyle"
            android:layout_margin="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:id="@+id/mail"
                tools:text="mmgolovanova@edu.hse.ru"
                android:layout_width="0dp"
                android:layout_weight="70"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mail_check"
        android:id="@+id/pass">
    <TextView
        android:id="@+id/dormitory_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_dormitory_label"
        android:theme="@style/MyTextStyle"
        android:layout_margin="5dp"

        />
    <Spinner
        android:id="@+id/groupList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_pass_label"
        android:theme="@style/MyTextStyle"
        />
    <EditText
        android:layout_height="0dp"
        android:minHeight="30dp"
        android:id="@+id/pass_1"
        tools:text="Введите код"
        android:layout_width="match_parent"
        android:inputType="numberPassword"
        android:layout_weight="70"/>
    <EditText
        android:layout_height="0dp"
        android:minHeight="30dp"
        android:id="@+id/pass_2"
        tools:text="Введите код"
        android:layout_width="match_parent"
        android:inputType="numberPassword"
        android:layout_weight="70"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>