<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minWidth="300dp"
        >
    <TextView
        android:id="@+id/mail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_label"
        android:theme="@style/MyTextStyle"
        android:layout_margin="5dp"
        />
    <EditText
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:inputType="text"
        tools:text="mmgolovanova@edu.hse.ru"

        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_label"
        android:theme="@style/MyTextStyle"
        android:layout_margin="5dp"
        />
    <EditText
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:id="@+id/pass_1"
        tools:text="Введите код"
        android:layout_width="match_parent"
        android:inputType="numberPassword"

        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="center_horizontal"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>