<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        style="@style/ActionBarVariantStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laundry_App"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/register_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="Восстановление пароля"
        android:textSize="25sp"
        android:theme="@style/MyLabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="7dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label2">

        <TextView
            android:id="@+id/mail_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/mail_label"
            android:theme="@style/MyTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="200dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#000000"
                tools:text="mmgolovanova@edu.hse.ru" />

            <Button
                android:id="@+id/send_code"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/code_button"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/code_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:text="Введите код:"
            android:theme="@style/MyTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:text="23567code" />

            <Button
                android:id="@+id/check_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Проверить"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/pass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pass_label"
            android:theme="@style/MyTextStyle" />

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="147dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/pass_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:minHeight="30dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    tools:text="Введите код" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Введите подтверждение пароля"
                    android:theme="@style/MyTextStyle" />

                <EditText
                    android:id="@+id/pass_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:minHeight="30dp"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    tools:text="Введите код" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/show_password"
                android:layout_width="44dp"
                android:layout_height="50dp"
                android:layout_gravity="top|center_vertical"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:foregroundGravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/showpassword"
                tools:srcCompat="@drawable/showpassword" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/set_new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Установить новый пароль"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>